<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_edit_profile"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/nav_list_of_attendees"
            android:icon="@drawable/view_list_of_attendees"
            android:title="@string/menu_list_of_attendees" />
        <item
            android:id="@+id/nav_signups"
            android:icon="@drawable/view_list_of_attendees"
            android:title="@string/list_of_SignUps" />
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_menu_announcements"
            android:title="@string/announcements" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/events" />


        <item
            android:id="@+id/notificationFragment2"
            android:icon="@drawable/baseline_circle_notifications_24"
            android:title="@string/send_notifications" />
        <item
            android:id="@+id/map"
            android:icon="@drawable/map"
            android:title="@string/map" />
        <item
            android:id="@+id/shareQrCodeItem"
            android:icon="@drawable/baseline_attach_email_24"
            android:title="@string/share_qr_code" />
        <item
            android:id="@+id/checkOutButton"
            android:icon="@drawable/baseline_arrow_back_24"
            android:title="@string/checkOut" />
    </group>
</menu>