<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/headerSendNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_list"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/defaultNotificationsRecycler"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/headerSendNotifications"
                tools:listitem="@layout/notification_row" />

            <LinearLayout
                android:id="@+id/customNotificationSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/defaultNotificationsRecycler"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/defaultNotificationsRecycler">

                <CheckBox
                    android:id="@+id/customNotificationCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/custom_notification" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotificationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_selector"
                    android:gravity="center_vertical"
                    android:hint="@string/notification_title"
                    android:padding="5dp"
                    android:paddingStart="10dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotificationText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_selector"

                    android:gravity="center_vertical"
                    android:hint="Enter Notification"
                    android:padding="5dp"
                    android:paddingStart="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/customNotificationSection"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/sendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Send" />

                    <Button
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Back" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Send and Back Buttons -->


</androidx.constraintlayout.widget.ConstraintLayout>