<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/organizeEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organize_event"
        android:layout_below="@id/checkInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

</RelativeLayout>
