<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signups"
            android:icon="@drawable/ic_menu_signups"
            android:title="@string/my_signups" />

        <item
            android:id="@+id/nav_organizer"
            android:icon="@drawable/ic_menu_edit_profile"
            android:title="@string/organized_events" />
        <item
            android:id="@+id/nav_attending"
            android:icon="@drawable/view_list_of_attendees"
            android:title="@string/attending_events" />
        <item
            android:id="@+id/MyEventsBackButton"
            android:icon="@drawable/baseline_arrow_back_24"
            android:title="@string/Back" />

    </group>
</menu>